# dragonarchy

./: .config  .gitignore  .local  .stow-local-ignore  FIREDRAGON_LID_FIX_INSTRUCTIONS.md  FORCE_PUSH_INSTRUCTIONS.md  IMMEDIATE_ACTION_REQUIRED.md  README.md  SDDM_FIX_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_CLEANUP.md  install  install.sh  purge-sensitive-history.sh  setup.sh  setup.sh.bak  stow.sh  stow_systemd.sh  sync_kde_settings.sh  test_pam_setup.sh
.github/: copilot-instructions.md
desktop/: dynamic_led.py
docs/: AUDIO_CONFIGURATION.md  DRAGON_CLI_SDDM_THEMES.md  HANDOFF-CHEZMOI-ARCHITECTURE-CLEANUP.md  HYPRLAND_AUTO_DETECTION.md  MIGRATION-SYSTEM.md  NFS_AUTOMOUNT_GUIDE.md  NFS_MULTI_MODE_IMPLEMENTATION.md  PACKAGE_AUTO_DETECTION.md  SDDM_THEME.md  SDDM_THEME_FIX.md  SWAYNC_CONFIG.md  elephant-copilot-provider.md  host-specific-gestures.md  remote_access_infra.md  secrets_setup.md
etc/: auto.nfs
hosts/: README.md
infra/: run-convergence.sh  validate-parity.sh
migrations/: 20260111_0001_fontconfig-path-and-stow-safe-theme.sh  (+3 more)
tools/pkgsolve/: Cargo.toml  README.md
tools/pkgsolve/src/: cli.rs  lib.rs  main.rs
tools/pkgsolve/src/arch/: mod.rs
tools/pkgsolve/src/debian/: mod.rs
tools/pkgsolve/src/manifest/: mod.rs
tools/pkgsolve/src/model/: mod.rs
tools/pkgsolve/src/output/: mod.rs
tools/pkgsolve/src/solver/: mod.rs
tools/pkgsolve/src/verify/: mod.rs
tools/pkgsolve/tests/: arch_mapping.rs  manifest_goals.rs  metadata_loader.rs
tools/pkgsolve/tests/fixtures/arch/: packages.txt
tools/pkgsolve/tests/fixtures/debian/: Packages
(+609 files in other folders)
