[package]
name = "pkgsolve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
indexmap = { version = "2.13.0", features = ["serde"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.27.0"
toml = "1.0.7"
walkdir = "2.5.0"
